QE-1275 Fix background blurring

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/site-banner/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/site-banner/style.scss
@@ -7,6 +7,8 @@
 	text-align: center;
 	padding: var(--spacing-3) var(--grid-col-gutter);
 	margin: 0;
+	position: relative;
+	z-index: 104;
 
 	a {
 		text-decoration: none;
